# llm-inference

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
engines/: __init__.py
engines/baseline/: README.md  __init__.py
engines/tinyengine/: README.md  __init__.py  tinyengine.py
labs/baseline/: README.md  __init__.py  baseline_engine.py  example.py
labs/bench/: bench.py
labs/microengine/: README.md  __init__.py  example.py  microengine.py
notes/: accelerating-diffusion-inference-via-caching.md  deepseek-v3.md  how-mp-serving-works-in-vllm.md  llm-inference-intro-p1.md  pagedattention.md  sarathi-serve.md
notes/distributed/: tp.md
projects/microengine/: README.md  __init__.py
