[project]
name = "mlsys-notes"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "C4",
]
ignore = [
    "E501",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
